# drift-spark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: competitors.md  drift-adapter-math.md
examples/: README.md  delta_cdc.py  drift_adapter.py  e2e_smoke_test.py  embed_with_real_api.py  query_after_migration.py  quickstart.py  status_and_lineage.py
integration-tests/: e2e_smoke_test.py  it-adapter.py  it-migrate.py  it-watch-components.py  it-watch-delta.py  launch-spark.py  local-drift-caller-no-qdrant.py  local-drift-caller-with-qrdant.py  local-drift-embed.py
src/drift/: __init__.py  _utils.py  adapter.py  cli.py  embed.py  ledger.py  migrate.py  shadow_eval.py  watch.py
tests/: test_adapter.py  test_cli.py  test_embed.py  test_ledger.py  test_migrate.py  test_shadow_eval.py  test_watch.py
