[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drift-spark"
dynamic = ["version"]
description = "Spark-native embedding lifecycle — produce, CDC refresh, migrate, adapter."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Aayush Chaturvedi", email = "4vedi.aayush@gmail.com" },
]
keywords = ["spark", "embeddings", "vector-database", "qdrant", "delta-lake", "cdc", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12.0",
  "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/aayush4vedi/drift-spark"
Repository = "https://github.com/aayush4vedi/drift-spark"

[project.scripts]
drift = "drift.cli:app"

[project.optional-dependencies]
spark = ["pyspark>=3.4.0"]
qdrant = ["qdrant-client>=1.18.0"]
pgvector = ["psycopg2-binary>=2.9.0"]
delta = ["delta-spark>=3.0.0"]
all = ["pyspark>=3.4.0", "qdrant-client>=1.18.0", "psycopg2-binary>=2.9.0", "delta-spark>=3.0.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas>=2.0",
]

[tool.hatch.version]
path = "src/drift/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/drift"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["drift"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
files = ["src/drift"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
